implement db related feature and requested methods
