# src/controllers/userController.js
@@ -1,68 +1,72 @@
-const {
-  getUserById,
-  getUserAndAlbumsByUserId,
-  getAlbumsAndImagesByUserId,
-} = require("../services/userService");
+const userService = require("../services/userService");
+const httpCodes = require("../utils/httpCodes");
 const result = require("../models/result");
-const httpCodes = require("../utils/httpcodes");
 
-const fetchUserById = (request, response, next) => {
+exports.getUser = async (request, response) => {
   try {
-    const userid = request.params.id;
-    getUserById(userid).then((records) => {
-      if (!records.length) {
-        response.status(httpCodes.OK).send(result(1, "no result found."));
-      } else {
-        response.status(httpCodes.OK).send(result(0, "Success", records));
-      }
-    });
-  } catch (error) {
-    next(error);
+    const id = request.params.id;
+    const results = await userService.getUser(id);
+    if (results) {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", results));
+    } else {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", "there are no record."));
+    }
+  } catch (err) {
+    console.error(err);
     response
       .status(httpCodes.INTERNAL_SERVER)
-      .send(result(1, `failure - ${error.message}`, []));
+      .send(result(INTERNAL_SERVER, "Failure", `Reason: ${err}`));
   }
 };
 
-const fetchUserAndAlbumsByUserId = (request, response, next) => {
+exports.getUserAlbums = async (request, response) => {
   try {
-    const userid = request.params.id;
-    getUserAndAlbumsByUserId(userid).then((records) => {
-      if (!records.length) {
-        response.status(httpCodes.OK).send(result(1, "no result found."));
-      } else {
-        response.status(httpCodes.OK).send(result(0, "Success", records));
-      }
-    });
-  } catch (error) {
-    next(error);
+    const id = request.params.id;
+    const results = await userService.getUserAlbums(id);
+    if (results) {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", results));
+    } else {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", "there are no record."));
+    }
+  } catch (err) {
+    console.error(err);
     response
       .status(httpCodes.INTERNAL_SERVER)
-      .send(result(1, `failure - ${error.message}`, []));
+      .send(result(INTERNAL_SERVER, "Failure", `Reason: ${err}`));
   }
 };
 
-const fetchAlbumsAndImagesByUserId = (request, response, next) => {
+exports.getUserAlbumsAndImages = async (request, response) => {
   try {
-    const userid = request.params.id;
-    const pageNumber = req.query.page;
-    getAlbumsAndImagesByUserId(userid, pageNumber).then((records) => {
-      if (!records.length) {
-        response.status(httpCodes.OK).send(result(1, "no result found."));
-      } else {
-        response.status(httpCodes.OK).send(result(0, "Success", records));
-      }
-    });
-  } catch (error) {
-    next(error);
+    const { limit, offset, sortByAlbumTitle } = request.query;
+    const id = request.params.id;
+    const results = await userService.getUserAlbumsAndImages(
+      id,
+      limit,
+      offset,
+      sortByAlbumTitle
+    );
+    if (results) {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", results));
+    } else {
+      response
+        .status(httpCodes.OK)
+        .send(result(httpCodes.OK, "Success", "there are no record."));
+    }
+  } catch (err) {
+    console.error(err);
     response
       .status(httpCodes.INTERNAL_SERVER)
-      .send(result(1, `failure - ${error.message}`, []));
+      .send(result(INTERNAL_SERVER, "Failure", `Reason: ${err}`));
   }
-};
-
-module.exports = {
-  fetchUserById,
-  fetchUserAndAlbumsByUserId,
-  fetchAlbumsAndImagesByUserId,
 };
