# src/routes/apiRoute.js
@@ -2,8 +2,20 @@ const router = require("express").Router();
 const validator = require("../middlewares/validator");
 const userController = require("../controllers/userController");
 
-router.get("/users/:id", validator.validateRecords(), userController.fetchUserById());
-router.get('/users/:id/albums',validator.validateRecords() , userController.fetchUserAndAlbumsByUserId());
-router.get('/users/:id/getAlbumsAndImages',validator.validateRecords() , userController.fetchAlbumsAndImagesByUserId());
+router.get(
+    "/:id", 
+    validator.validateRequestUserId(), 
+    userController.getUser);
+    
+router.get(
+  "/:id/albums",
+  validator.validateRequestUserId(),
+  userController.getUserAlbums
+);
+router.get(
+  "/:id/albums/images",
+  validator.validateRequestGetUserAlbumsAndImages(),
+  userController.getUserAlbumsAndImages
+);
 
 module.exports = router;
